Cadastro e verificaçã de login no firebase, com testes para envio de email

--- a/app/src/main/res/layout/cadastro.xml
+++ b/app/src/main/res/layout/cadastro.xml
@@ -15,7 +15,7 @@
         android:layout_marginBottom="28dp"
         android:backgroundTint="#B3CDB4"
         android:backgroundTintMode="src_over"
-        android:onClick="gotoFormatacao"
+        android:onClick="gotoMain"
         android:text="Cadastrar"
         android:textColor="@color/black"
         android:textColorHighlight="@color/white"
@@ -26,8 +26,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
-        app:layout_constraintVertical_bias="0.524"
         app:rippleColor="@color/white"
         app:strokeColor="@color/white" />
 
@@ -67,8 +65,7 @@
         android:background="#C5D3C6"
         android:ems="10"
         android:inputType="textEmailAddress"
-        android:text="Email"
-        android:textColor="@android:color/darker_gray"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/editTextNumberPassword"
         app:layout_constraintEnd_toEndOf="@+id/editTextNumberPassword"
         app:layout_constraintHorizontal_bias="0.0"
@@ -83,8 +80,7 @@
         android:background="#C5D3C6"
         android:ems="10"
         android:inputType="text"
-        android:text="Name"
-        android:textColor="@android:color/darker_gray"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress3"
         app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress3"
         app:layout_constraintHorizontal_bias="0.0"
@@ -98,8 +94,7 @@
         android:background="#C5D3C6"
         android:ems="10"
         android:inputType="numberPassword"
-        android:text="senha"
-        android:textColor="@android:color/darker_gray"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/button10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -149,6 +144,7 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="gotoMain"
         android:text="Entrar"
         app:layout_constraintBottom_toBottomOf="@+id/imageView7"
         app:layout_constraintEnd_toEndOf="@+id/imageView7"
