--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,8 +43,8 @@
         android:background="#C5D3C6"
         android:ems="10"
         android:inputType="textEmailAddress"
-        android:text="E-mail: "
-        android:textColor="@android:color/darker_gray"
+        android:text=" "
+        android:textColor="@color/black"
         android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -60,8 +60,7 @@
         android:background="#C5D3C6"
         android:ems="10"
         android:inputType="textPassword"
-        android:text="Senha: "
-        android:textColor="@android:color/darker_gray"
+        android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
